Wireframe css modified

--- a/index.html
+++ b/index.html
@@ -31,20 +31,50 @@
       </section>
 
       <section>
-        <img src="https://place-hold.it/450/rrffgg" />
+        <img
+          src="https://place-hold.it/480x400/aaa/000&text=Featured%20Section%20Banner"
+        />
 
         <article>
           <h2>Featured section heading</h2>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio
+            expedita possimus officia! Vitae laudantium dolor officia quas
+            explicabo fugit voluptatum, quibusdam beatae accusamus iusto
+            nesciunt nobis! Tempora esse velit inventore! Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Distinctio expedita possimus
+            officia! Vitae laudantium dolor officia quas explicabo fugit
+            voluptatum, quibusdam beatae accusamus iusto nesciunt nobis! Tempora
+            esse velit inventore! Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Distinctio expedita possimus officia! Vitae
+            laudantium dolor officia quas explicabo fugit voluptatum, quibusdam
+            beatae accusamus iusto nesciunt nobis! Tempora esse velit inventore!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio
+            expedita possimus officia! Vitae laudantium dolor officia quas
+            explicabo fugit voluptatum, quibusdam beatae accusamus iusto
+            nesciunt nobis! Tempora esse velit inventore! Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Distinctio expedita possimus
+            officia! Vitae laudantium dolor officia quas explicabo fugit
+            voluptatum, quibusdam beatae accusamus iusto nesciunt nobis! Tempora
+            esse velit inventore! Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Distinctio expedita possimus officia! Vitae
+            laudantium dolor officia quas explicabo fugit voluptatum, quibusdam
+            beatae accusamus iusto nesciunt nobis! Tempora esse velit inventore!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio
+            expedita possimus officia! Vitae laudantium dolor officia quas
+            explicabo fugit voluptatum, quibusdam beatae accusamus iusto
+            nesciunt nobis! Tempora esse velit inventore! Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Distinctio expedita possimus
+            officia! Vitae laudantium dolor officia quas explicabo fugit
+            voluptatum, quibusdam beatae accusamus iusto nesciunt nobis! Tempora
+            esse velit inventore! Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Distinctio expedita possimus officia! Vitae
+            laudantium dolor officia quas explicabo fugit voluptatum, quibusdam
+            beatae accusamus iusto nesciunt nobis! Tempora esse velit inventore!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio
+            expedita possimus officia! Vitae laudantium dolor officia quas
+            explicabo fugit voluptatum, quibusdam beatae accusamus iusto
+            nesciunt nobis! Tempora esse velit inventore!
           </p>
           <button>call to action</button>
         </article>
